--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <!-- Single Lyrics -->
-            <h3 id="error-message" class="text-danger"></h3>
+            <h3 id="error-message" class="text-danger text-custom"></h3>
             <div id="song-lyrics" class="single-lyrics text-center">
 
             </div>
